[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urikvm-docker-example"
version = "0.1.0"
description = "Docker glue for urikvm bundle — installs tellmesh sibling packs"
requires-python = ">=3.10"
dependencies = ["urikvmedge[real]>=0.1.0"]

[project.optional-dependencies]
real = ["litellm>=1.40"]

[tool.uv.sources]
urikvmedge = { path = "../urikvmedge", editable = true }
urioperators = { path = "../urioperators", editable = true }
urikvm = { path = "../urikvm", editable = true }
urihim = { path = "../urihim", editable = true }
uriocr = { path = "../uriocr", editable = true }
urillm = { path = "../urillm", editable = true }

[project.scripts]
urisys-kvm = "urikvmedge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
